--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  advance_pdf_viewer: ^2.0.0
+  advance_pdf_viewer:
+    git:
+      url: https://github.com/lohanidamodar/pdf_viewer.git
+      ref: 4e5d96be29de515f1081c0b6897741b8dca84722
   document_scanner_flutter:
     # When depending on this package from a real application you should use:
     #   document_scanner_flutter: ^x.y.z
